8145270: Need to eagerly initialize JVMCI compiler under -Xcomp

Reviewed-by: twisti